[css-logical] Alias -webkit- logical sizing properties to standard ones

They were implemented as independent properties that behave identically,
except that issue 849855 was only fixed for the standard ones.

BUG=859879

Change-Id: Ibc533cdc8a35b4f2d3e680a334369ddeafc427be
Reviewed-on: https://chromium-review.googlesource.com/1124844
Reviewed-by: Anders Ruud <andruud@chromium.org>
Reviewed-by: Yoav Weiss <yoav@yoav.ws>
Reviewed-by: Manuel Rego Casasnovas <rego@igalia.com>
Commit-Queue: Oriol Brufau <obrufau@igalia.com>
Cr-Commit-Position: refs/heads/master@{#572837}
Former-commit-id: 425106d9525007f9c2c4296e5bdc17124836214f