third_party/blink/renderer/core/css/parser/css_parser_fast_paths.cc
@@ -57,10 +57,6 @@ static inline bool IsSimpleLengthPropertyID(CSSPropertyID property_id,
     case CSSPropertyScrollPaddingLeft:
     case CSSPropertyScrollPaddingRight:
     case CSSPropertyScrollPaddingTop:
-    case CSSPropertyWebkitLogicalWidth:
-    case CSSPropertyWebkitLogicalHeight:
-    case CSSPropertyWebkitMinLogicalWidth:
-    case CSSPropertyWebkitMinLogicalHeight:
     case CSSPropertyPaddingBlockEnd:
     case CSSPropertyPaddingBlockStart:
     case CSSPropertyPaddingInlineEnd:
